# elk-e

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  configure.sh  elke_main.cc  make_doc.sh
doc/: CodingConventions.md
doc/DesignRequirements/: DesignRequirements.md
doc/doxygen_settings/: doxyconfig_elke  doxygen-style-main.css  doxygen-style.css  doxygenlayout.xml
doc/pages/: InputParameterSystem.md  mainpage.md
elke_core/: CoreModule.h  CoreModule_00.cc  CoreModule_01_execute.cc  CoreModule_02_CLI.cc  FrameworkCore.h  FrameworkCore_00.cc  FrameworkCore_01_cli.cc  elke.cc  elke.h
elke_core/base/: ItemStack.h  ItemStorage.h  ModuleBase.h  ModuleBase_00.cc  ModuleBase_01_cli.cc  Simulation.cc  Simulation.h  Warehouse.cc  Warehouse.h
elke_core/bases/: ModuleBase.h  ModuleBase_00.cc  ModuleBase_01_cli.cc
elke_core/c_api/: c_api_DataTree.cc  c_api_DataTree.h
elke_core/cli/: CommandLineArgument.cc  CommandLineArgument.h  CommandLineArgumentList.cc  CommandLineArgumentList.h  CommandLineInterface.cc  CommandLineInterface.h  a01_setupGlobalCLI.cc  a02_parseCommandLine.cc  a03_initialCLIResponse.cc
elke_core/data_types/: DataGrossType.cc  DataGrossType.h  DataTree.cc  DataTree.h  ScalarData.h  ScalarValue.cc  ScalarValue.h  Varying.cc  Varying.h  VaryingHelpers.cc  VaryingHelpers.h
elke_core/factory/: Factory.cc  Factory.h  FactoryObject.cc  FactoryObject.h
elke_core/globals/: Globals.cc  Globals.h
elke_core/input/: InputParser.cc  InputParser.h  InputProcessor.cc  InputProcessor.h  YAMLInput.cc  YAMLInput.h
elke_core/math/: Vec3.cc  Vec3.h
elke_core/mpi/: MPI_Interface.cc  MPI_Interface.h
elke_core/output/: LogStream.cc  LogStream.h  Logger.cc  Logger.h  OutputInterface.cc  OutputInterface.h  StringColor.h  elk_exceptions.cc  elk_exceptions.h
elke_core/parameters/: InputParameter.cc  InputParameter.h  InputParametersBlock.cc  InputParametersBlock.h  ParameterCheck.cc  ParameterCheck.h
elke_core/parameters/parameter_types/: FixedVectorOfNamedBlocksInputParameter.h  MapOfNamedBlocksInputParameter.h  MapOfRegisteredObjectsInputParameter.h  NamedBlockInputParameter.h  RegisteredObjectInputParameter.h  ScalarInputParameter.h  VectorOfNamedBlocksInputParameter.h  VectorOfRegisteredObjectsInputParameter.h  VectorOfScalarsInputParameter.h
elke_core/parameters2/: ParameterTree.cc  ParameterTree.h  ParameterTreeMetaData.h  ParameterTree_helpers.h  param_checks.cc  param_checks.h
elke_core/registration/: registration.cc  registration.h
elke_core/syntax_blocks/: SimulationBlock.cc  SimulationBlock.h  SyntaxBlock.cc  SyntaxBlock.h
elke_core/utilities/: general_utils.cc  general_utils.h  special_iterators.h  string_utils.cc  string_utils.h  template_helpers.h
python/: call_elke.py
python/elke/basic/: ElkeDataTree.py  __init__.py  basic_routines.py
test/: README.md  TestSystemCONFIG.yaml  run_tests
test/src/: unitTestVec3.cc  unitTest_CLIs.cc  unitTest_InputParametersBlock.cc  unitTest_ParameterTree.cc  unitTest_ScalarValue.cc  unitTest_Varying.cc  unitTest_YAMLInput.cc  unitTest_cpptrace.cc
test/src/syntax_blocks/: TestSyntaxBlock.cc  TestSyntaxBlock.h
test/src/test_objects/: TestObject1.cc  TestObject2.cc
test/tests/A01_CLI/: ZCLIs_tests.yaml
test/tests/A02_input_processing/: Z_input_processing_tests.yaml  block_test1.yaml  block_test2.yaml  block_test3.yaml  input_for_TestSyntaxBlock.yaml  unitTest_InputParametersBlock.yaml  unitTest_ParameterTree.yaml
test/tests/A02_input_processing/gold/: unitTest_InputParametersBlock.cout_gold  unitTest_ParameterTree.cout_gold
test/tests/input_processing/: Z01_tests.yaml  block_test1.yaml  block_test2.yaml
test/tests/python_interface_tests/: Ztests.yaml  python_test1.py
test/tests/unit_tests/: CLIs_tests.yaml  SampleYAMLInput.yaml  Vec3_tests.yaml  ZCLIs_tests.yaml  ZUnitTests_tests.yaml  ZYAMLInput_tests.yaml
tools/: configure_dependencies.py  elke_configuration.h.in
